Fix the horizontal alignment of the name on mobile screens

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -110,7 +110,9 @@
         align-items: start;
     }
     .profile__info-title {
+        grid-column: 1 / -1;
         align-self: center;
+        justify-self: center;
         font-size: 20px;
         font-weight: 400;
         margin: 0;
